--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # theme
-source ${HOME}/.tmux-themepack/powerline/double/orange.tmuxtheme
+source /usr/share/tmux/theme-pack-jimeh/powerline/double/orange.tmuxtheme
 
 # use C-a as prefix
 set-option -g prefix C-a
