--- a/.config/sway/config
+++ b/.config/sway/config
@@ -45,7 +45,7 @@ exec swayidle -w \
 # Read `man 5 sway-input` for more information about this section.
 #
 input * {
-    tap enabled
+    tap disable
     natural_scroll enabled
 }
 
