--- a/.config/sway/config
+++ b/.config/sway/config
@@ -191,7 +191,7 @@ bindsym $mod+r mode "resize"
 
 set $mode_system System: (l) lock, (e) logout, (s) suspend, (r) reboot, (S) shutdown, (R) UEFI
 mode "$mode_system" {
-    bindsym l exec $lock, mode "default"
+    bindsym l exec swaylock -f -c 000000, mode "default"
     bindsym e exit
     bindsym s exec --no-startup-id systemctl suspend, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
