waybar: some styling

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -51,7 +51,7 @@ exec swayidle -w \
 # Read `man 5 sway-input` for more information about this section.
 #
 input * {
-    tap disable
+    tap disabled
     natural_scroll enabled
 }
 
