--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,5 +1,11 @@
 # Sway config
 
+# TODO
+# [?] Fuzzy Chrome
+# [v] Brightness without sudo
+# [?] Hide scrollbar
+# [?] Waybar background color
+
 ### Variables
 
 # Font
@@ -26,7 +32,7 @@ set $menu 'rofi -modi run, drun, window  -show drun'
 ### TODO: Output configuration
 
 # Wallpaper
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg /home/anr/Pictures/wallpaper.jpg fill
 
 # Displays
 # You can get the names of your outputs by running: swaymsg -t get_outputs
@@ -238,7 +244,7 @@ bar {
 }
 
 ### Dex
-#exec --no-startup-id "dex -ae sway"
+exec --no-startup-id "dex -ae sway"
 
 ### Rofi
 bindsym $mod+Shift+d exec "rofi -modi window,windowcd -show window"
