--- a/.config/sway/config
+++ b/.config/sway/config
@@ -36,7 +36,7 @@ output * bg /home/anr/Pictures/wallpaper.jpg fill
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
-output DP-1 scale 1.5
+output DP-1 scale 1.4
 output eDP-1 scale 2.0
 
 # Idle configuration
@@ -138,6 +138,9 @@ input * {
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 
+    # Move workspace to another screen
+    bindsym $mod+x move workspace to output right
+
 # Layout stuff
 
     # You can "split" the current object of your focus with
@@ -182,16 +185,16 @@ mode "resize" {
     # right will grow the containers width
     # up will shrink the containers height
     # down will grow the containers height
-    bindsym $left resize shrink width 10px
-    bindsym $down resize grow height 10px
-    bindsym $up resize shrink height 10px
-    bindsym $right resize grow width 10px
+    bindsym $left resize shrink width 30px
+    bindsym $down resize grow height 30px
+    bindsym $up resize shrink height 30px
+    bindsym $right resize grow width 30px
 
     # Ditto, with arrow keys
-    bindsym Left resize shrink width 10px
-    bindsym Down resize grow height 10px
-    bindsym Up resize shrink height 10px
-    bindsym Right resize grow width 10px
+    bindsym Left resize shrink width 30px
+    bindsym Down resize grow height 30px
+    bindsym Up resize shrink height 30px
+    bindsym Right resize grow width 30px
 
     # Return to default mode
     bindsym Return mode "default"
