--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # theme
-source /usr/share/tmux/theme-pack-jimeh/powerline/double/orange.tmuxtheme
+source /usr/share/tmux/theme-pack-jimeh/powerline/default/orange.tmuxtheme
 
 # use C-a as prefix
 set-option -g prefix C-a
@@ -60,3 +60,5 @@ bind-key -T copy-mode-vi M-Left select-pane -L
 bind-key -T copy-mode-vi M-Down select-pane -D
 bind-key -T copy-mode-vi M-Up select-pane -U
 bind-key -T copy-mode-vi M-Right select-pane -R
+
+run-shell ~/.tmux.d/extrakto/extrakto.tmux
