--- a/.ripgreprc
+++ b/.ripgreprc
@@ -2,8 +2,8 @@
 --max-columns=150
 
 # Set the colors.
---colors=line:none
---colors=line:style:bold
+# --colors=line:none
+# --colors=line:style:bold
 
 # Because who cares about case!?
---smart-case
+# --smart-case
