spacemacs and tmux stuff

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,4 +61,7 @@ bind-key -T copy-mode-vi M-Down select-pane -D
 bind-key -T copy-mode-vi M-Up select-pane -U
 bind-key -T copy-mode-vi M-Right select-pane -R
 
+# copy-mode shortcuts
+bind-key -n F4 copy-mode
+
 run-shell ~/.tmux.d/extrakto/extrakto.tmux
