--- a/.SpaceVim.d/init.toml
+++ b/.SpaceVim.d/init.toml
@@ -11,7 +11,7 @@
     # set spacevim theme. by default colorscheme layer is not loaded,
     # if you want to use more colorscheme, please load the colorscheme
     # layer
-    colorscheme = "gruvbox"
+    colorscheme = "SpaceVim"
     colorscheme_bg = "dark"
     # Disable guicolors in basic mode, many terminal do not support 24bit
     # true colors
@@ -34,3 +34,27 @@ auto_completion_tab_key_behavior = "smart"
 name = 'shell'
 default_position = 'top'
 default_height = 30
+
+[[layers]]
+name = 'colorscheme'
+
+[[layers]]
+name = 'CtrlP'
+
+[[layers]]
+name = 'fzf'
+
+[[layers]]
+name = 'lang#c'
+
+[[layers]]
+name = 'lang#java'
+
+[[layers]]
+name = 'lang#kotlin'
+
+[[layers]]
+name = 'lang#sh'
+
+[[layers]]
+name = 'lang#python'
