SpaceVim: disable relative line numbering

--- a/.SpaceVim.d/init.toml
+++ b/.SpaceVim.d/init.toml
@@ -24,6 +24,7 @@
     enable_tabline_filetype_icon = true
     enable_statusline_mode = false
     default_indent = 4
+    relativenumber = false
 
 # Enable autocomplete layer
 [[layers]]
