--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,3 +65,5 @@ bind-key -T copy-mode-vi M-Right select-pane -R
 bind-key -n F4 copy-mode
 
 run-shell ~/.tmux.d/extrakto/extrakto.tmux
+set -g @extrakto_copy_key "tab"      # use tab to copy to clipboard
+set -g @extrakto_insert_key "enter"  # use enter to insert selection
