--- a/.tigrc
+++ b/.tigrc
@@ -8,3 +8,52 @@ color cursor    default 237
 
 # Speed up large repositories
 source ~/.tigrc.large
+
+## Blame-View
+set blame-view = \
+    line-number:yes,interval=1,width=5 \
+    date:custom,format="%Y-%m-%d %H:%M" \
+    author:full,width=16 \
+    id:yes \
+    text:yes
+
+## Main-View
+set main-view = \
+    line-number:no,interval=5,width=5 \
+    date:custom,format="%Y-%m-%d %H:%M" \
+    author:abbreviated,width=12 \
+    id:no \
+    commit-title:yes,graph=yes,refs=yes,overflow=no
+
+## Refs-View
+set refs-view = \
+    line-number:no,interval=1,width=5 \
+    date:custom,format="%Y-%m-%d %H:%M" \
+    author:abbreviated,width=12 \
+    id:no \
+    ref:yes \
+    commit-title:yes,graph=yes,refs=yes,overflow=no
+
+## Stash-View
+set stash-view = \
+    line-number:no,interval=1,width=5 \
+    date:custom,format="%Y-%m-%d %H:%M" \
+    author:abbreviated,width=12 \
+    id:no \
+    commit-title:yes,graph=yes,refs=yes,overflow=no
+
+## Status-View
+set status-view = \
+    line-number:no,interval=1,width=5 \
+    status:long \
+    file-name:always
+
+## Tree-View
+set tree-view = \
+    line-number:no,interval=5,width=5 \
+    date:custom,format="%Y-%m-%d %H:%M" \
+    author:abbreviated,width=12 \
+    id:no \
+    mode:yes \
+    file-size:units \
+    file-name:always
