--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,3 +67,6 @@ bind-key -n F4 copy-mode
 run-shell ~/.tmux.d/extrakto/extrakto.tmux
 set -g @extrakto_copy_key "tab"      # use tab to copy to clipboard
 set -g @extrakto_insert_key "enter"  # use enter to insert selection
+
+# use vi shortcuts in copy-mode
+setw -g mode-keys vi
