--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,3 @@
-# theme
-source /usr/share/tmux/theme-pack-jimeh/powerline/double/cyan.tmuxtheme
-
 # use C-a as prefix
 set-option -g prefix C-a
 unbind-key C-b
@@ -70,3 +67,18 @@ set -g @extrakto_insert_key "enter"  # use enter to insert selection
 
 # use vi shortcuts in copy-mode
 setw -g mode-keys vi
+
+# catppuccin: config to be done before loading
+set -g @catppuccin_window_text " #W"
+set -g @catppuccin_window_current_text " #W"
+
+# theme
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
