kitty: copy_on_select: yes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,9 @@
-# vim:fileencoding=utf-8:foldmethod=marker
-
 #: Fonts
 font_family      MesloLGS NF
 font_size 10.0
+
+#: Copy/Paste
+copy_on_select yes
 
 # BEGIN_KITTY_THEME
 # Catppuccin-Mocha
