--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,6 +6,6 @@ font_size 10.0
 copy_on_select yes
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# VSCode_Dark
 include current-theme.conf
 # END_KITTY_THEME
