tmux: moving to arch

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,12 @@
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'laktak/extrakto'
+
+
+# theme (catppuccin)
+set -g @catppuccin_flavour 'macchiato' # or latte, frappe, macchiato, mocha
+
 # use C-a as prefix
 set-option -g prefix C-a
 unbind-key C-b
@@ -61,24 +70,16 @@ bind-key -T copy-mode-vi M-Right select-pane -R
 # copy-mode shortcuts
 bind-key -n F4 copy-mode
 
-run-shell ~/.tmux.d/extrakto/extrakto.tmux
 set -g @extrakto_copy_key "tab"      # use tab to copy to clipboard
 set -g @extrakto_insert_key "enter"  # use enter to insert selection
 
 # use vi shortcuts in copy-mode
 setw -g mode-keys vi
 
-# catppuccin: config to be done before loading
-set -g @catppuccin_window_text " #W"
-set -g @catppuccin_window_current_text " #W"
-
-# theme
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-
 # Make the status line pretty and add some modules
 set -g status-right-length 100
 set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -g @catppuccin_status_modules_right "application session uptime"
+
+# install plugins
+run '~/.tmux/plugins/tpm/tpm'
