--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,6 +43,7 @@ set-window-option -g xterm-keys on # to make ctrl-arrow, etc. work
 
 # disable automatic renaming of windows
 set-window-option -g automatic-rename off
+set-option -g allow-rename off
 
 # more scrollback history
 set -g history-limit 100000
